src/objects/UHW_Staff_Snapshot__c.object
<CustomObject>
    <description>Contains UHW All Staff - data snapshots every month. This is for HR/Triana&apos;s staff dashboard.</description>
    <fields>
        <fullName>Account_Id__c</fullName>
        <label>Account Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Account_Name__c</fullName>
        <label>Account Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Age_Group__c</fullName>
        <label>Age Group</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under 30</fullName>
                    <color>#0B6FCE</color>
                    <label>Under 30</label>
                </value>
                <value>
                    <fullName>30 to 39</fullName>
                    <color>#78C953</color>
                    <label>30 to 39</label>
                </value>
                <value>
                    <fullName>40 to 49</fullName>
                    <color>#E27001</color>
                    <label>40 to 49</label>
                </value>
                <value>
                    <fullName>50 to 59</fullName>
                    <color>#A53711</color>
                    <label>50 to 59</label>
                </value>
                <value>
                    <fullName>60 to 69</fullName>
                    <color>#F3D904</color>
                    <label>60 to 69</label>
                </value>
                <value>
                    <fullName>70+</fullName>
                    <color>#A845DC</color>
                    <label>70+</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age__c</fullName>
        <label>Age</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Birthdate__c</fullName>
        <label>Birthdate</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Contact_Id__c</fullName>
        <label>Contact Id</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Email__c</fullName>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>Employee_Id__c</fullName>
        <label>Employee Id</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Ethnicity__c</fullName>
        <label>Ethnicity</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>American Indian or Alaska Native</fullName>
                    <color>#0B6FCE</color>
                    <label>American Indian or Alaska Native</label>
                </value>
                <value>
                    <fullName>Asian</fullName>
                    <color>#78C953</color>
                    <label>Asian</label>
                </value>
                <value>
                    <fullName>Black or African American</fullName>
                    <color>#E27001</color>
                    <label>Black or African American</label>
                </value>
                <value>
                    <fullName>Hispanic or Latino</fullName>
                    <color>#A53711</color>
                    <label>Hispanic or Latino</label>
                </value>
                <value>
                    <fullName>Native Hawaiian or Other Pacific Islander</fullName>
                    <color>#F3D904</color>
                    <label>Native Hawaiian or Other Pacific Islander</label>
                </value>
                <value>
                    <fullName>Two or More Races</fullName>
                    <color>#A845DC</color>
                    <label>Two or More Races</label>
                </value>
                <value>
                    <fullName>White</fullName>
                    <color>#66E9BD</color>
                    <label>White</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>FID__c</fullName>
        <label>FID</label>
        <length>14</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>First_Name__c</fullName>
        <label>First Name</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Full_Name__c</fullName>
        <label>Full Name</label>
        <length>120</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Gender__c</fullName>
        <label>Gender</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Female</fullName>
                    <color>#F96FB7</color>
                    <label>Female</label>
                </value>
                <value>
                    <fullName>Male</fullName>
                    <color>#0B6FCE</color>
                    <label>Male</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Hire_Date__c</fullName>
        <label>Hire Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Last_Name__c</fullName>
        <label>Last Name</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <label>Location</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manager__c</fullName>
        <formula>IF
(
OR(OR(OR(OR( CONTAINS(Title__c , &quot;COORD&quot;),CONTAINS( Title__c, &quot;DIRECTOR&quot;),CONTAINS(Title__c , &quot;MANAGER&quot;),CONTAINS(Title__c , &quot;PRESIDENT&quot;),CONTAINS(Title__c , &quot;CHIEF&quot;)  ))))

,TRUE, FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Manager?</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>OPS_Admin__c</fullName>
        <formula>IF
(
OR(OR( CONTAINS(Title__c , &quot;ADMIN&quot;),CONTAINS( Department__c , &quot;OPS&quot;),CONTAINS(Title__c , &quot;AA&quot;) ))

,TRUE, FALSE
)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>OPS&amp;Admin</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Primary_Language__c</fullName>
        <label>Primary Language</label>
        <length>80</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Probable_Language__c</fullName>
        <label>Probable Language</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Race__c</fullName>
        <label>Race</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>A/PI</fullName>
                    <color>#8F6429</color>
                    <label>A/PI</label>
                </value>
                <value>
                    <fullName>American Indian Or Alaska Native</fullName>
                    <color>#78C953</color>
                    <label>American Indian Or Alaska Native</label>
                </value>
                <value>
                    <fullName>Black Or African American</fullName>
                    <color>#E27001</color>
                    <label>Black Or African American</label>
                </value>
                <value>
                    <fullName>Latino</fullName>
                    <color>#A845DC</color>
                    <label>Latino</label>
                </value>
                <value>
                    <fullName>Two Or More Races</fullName>
                    <color>#F3D904</color>
                    <label>Two Or More Races</label>
                </value>
                <value>
                    <fullName>White</fullName>
                    <color>#AFCADF</color>
                    <label>White</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Snapshot_Month__c</fullName>
        <formula>CASE(MONTH( Datevalue(CreatedDate)), 1, &quot;January&quot;, 2, &quot;February&quot;, 3, &quot;March&quot;,  4, &quot;April&quot;,  5, &quot;May&quot;,  6, &quot;June&quot;, 7, &quot;July&quot;, 8, &quot;August&quot;, 9, &quot;September&quot;, 10, &quot;October&quot;, 11, &quot;November&quot;, 12, &quot;December&quot;, &quot;None&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Month</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Snapshot_Year__c</fullName>
        <formula>TEXT(Year( Datevalue(CreatedDate)))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Snapshot Year</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Staff_Type__c</fullName>
        <label>Staff Type</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Title__c</fullName>
        <description>Job Title</description>
        <label>Title</label>
        <length>128</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Years_Of_Service__c</fullName>
        <label>Years Of Service</label>
        <precision>4</precision>
        <scale>1</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Yrs_of_Service__c</fullName>
        <label>Yrs of Service</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Under 3 Yrs</fullName>
                    <color>#66E9BD</color>
                    <label>Under 3 Yrs</label>
                </value>
                <value>
                    <fullName>3 to 5 Yrs</fullName>
                    <color>#0B24BE</color>
                    <label>3 to 5 Yrs</label>
                </value>
                <value>
                    <fullName>5 to 10 Yrs</fullName>
                    <color>#419249</color>
                    <label>5 to 10 Yrs</label>
                </value>
                <value>
                    <fullName>10 to 15 Yrs</fullName>
                    <color>#F3D904</color>
                    <label>10 to 15 Yrs</label>
                </value>
                <value>
                    <fullName>15+</fullName>
                    <color>#641CCF</color>
                    <label>15+</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>UHW Staff Snapshot</label>
    <nameField>
        <displayFormat>S-{MM}{DD}{YY}-{0}</displayFormat>
        <label>Snapshot Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>UHW Staff Snapshots</pluralLabel>
    <sharingModel>Read</sharingModel>
</CustomObject>